--- a/arch/arm64/configs/j7_defconfig
+++ b/arch/arm64/configs/j7_defconfig
@@ -35,8 +35,8 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION=""
-# CONFIG_LOCALVERSION_AUTO is not set
+CONFIG_LOCALVERSION="GPower-Kernel-J700H"
+CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
@@ -3157,6 +3157,7 @@ CONFIG_SEC_REBOOT=y
 # CONFIG_SEC_MISC is not set
 CONFIG_ARGOS=y
 CONFIG_SEC_DEBUG=y
+CONFIG_SEC_DEBUG_LOW_LOG=y
 
 #
 # BSP Feature
